# bp_prototyp

./: CMakeLists.txt  main.cpp
cascades/: cascade.xml  cascade_5.xml  plate_cascade_stage9.xml  plate_cascade_stage_14.xml  plate_cascade_stage_19.xml  plate_cascade_stage_4.xml
classes/: CascadeDetector.cpp  CascadeDetector.h  Detector.h  DetectorFactory.cpp  DetectorFactory.h  YoloDetector.cpp  YoloDetector.h  videoPlayer.cpp  videoPlayer.h
config/: yolov3_custom.cfg
